[package]
name = "helgoboss-license-api"
version = "0.1.0"
authors = ["Benjamin Klum <benjamin.klum@helgoboss.org>"]
edition = "2021"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
validator = { version = "0.16.1", features = ["derive"] }
hex = "0.4.3"
clap = { version = "4.3.11", features = ["derive"] }
anyhow = "1.0.71"
base64 = "0.21.2"
serde_json = "1"